manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: calender
    tier: live
  name: calender
  namespace: verulamcc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: calender
    tier: live
  sessionAffinity: None
  type: ClusterIP
